# Eprice

./: LICENSE  README.md  for_virtualbox.sh  requests.http
.github/workflows/: codeql.yml
App/: .dockerignore  .gitignore  README.md  compose.yaml  project.env  requests.http
App/backend-tests/: .gitignore  Dockerfile  README.md  pyproject.toml  report.html  report2.html
App/backend-tests/tests/: test_auth_controller.py  test_data_controller.py
App/chat-engine/: .dockerignore  .env.development  .gitignore  Dockerfile  README.md  _compose.yaml  agent_app.py  agent_manager.py  app.py  autoloading_uml.py  chat_app.py  chat_manager_with_tools.py  file_app.py  gradio_dashboard.py  pyproject.toml
App/chat-engine/data/: backend_code.txt  exclude_dirs.txt  exclude_files.txt  project_files.txt  project_structure.txt
App/chat-engine/diagrams/: diagram.puml
App/chat-engine/utils/: __init__.py  db_calls.py  helpers.py  tools.py
App/client/: .env.development  .env.local  .gitignore  Dockerfile  README.md  lib – Pikakuvake.lnk  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
App/data-preparation/: README.md
App/e2e-tests/: Dockerfile  (+2 more)
App/python-server/development_notebooks/: README.md  pyproject.toml  testing.ipynb
Documents/: CONTRIBUTIONS.md  Esitys.pptx  KONTRIBUUTIOT.md  Presentatio_FIN.pptx  README.md  auth_classes.wsd  auth_use_case.wsd  authentication.seqdiag  backend_call_diagram.wsd  backend_design.md  data_access.seqdiag  data_access_pattern.wsd  frontend_description.md  llm_retrieval.seqdiag  ohjeistusta.md  openapi_endpoint_descriptions.md  project_description.md  project_directory_structure.txt  projektin_kuvaus.md  testing_plan.md  tool_calling.seqdiag  tool_calling.wsd  topology.md  topology.wsd
Notebooks/: .env.development  .gitignore  README.md  app.py  app2.py  autoloading_uml.py  chat_and_uml.py  diagram.puml  document_loading.ipynb  exclude_dirs.txt  exclude_files.txt  exclude_imports.txt  gradio_dashboard.py  instruction.txt  parse_code.py  parse_files.py  parse_project.py  plantuml.py  print_contents.py  pyproject.toml  testing.ipynb  uml_app.py  working_chat.ipynb
Notebooks/data/: backend_code.txt  exclude_dirs.txt  exclude_files.txt  project_files.txt  project_structure.txt
Notebooks/document_parsing/: README.md  __init__.py  document_loading.ipynb  document_parsing.ipynb  format_code.py  format_documents.py  helpers.py  parse_code.py  parse_contents.py  parse_files.py  parse_project.sh  update_database.py
(+146 files in other folders)
