[project]
name = "notebooks"
version = "0.1.0"
requires-python = "==3.11.6"
dependencies = [
    "faiss-cpu",
    "docarray>=0.41.0",
    "dotenv>=0.9.9",
    "gradio>=5.30.0",
    "gradio-client>=1.10.1",
    "inflection>=0.5.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "numpy>=2.2.5",
    "ollama>=0.4.8",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pip>=25.1",
    "psycopg>=3.2.7",
    "pypdf>=5.4.0",
    "pytesseract>=0.3.13",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "stdlib-list>=0.11.1",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "langchain-postgres>=0.0.13",
    "langchain-openai>=0.3.18",
]
