[project]
name = "backend-tests"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pip>=25.1.1",
    "pydantic[email]>=2.11.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-jose>=3.4.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
