[project]
name = "chat-engine"
version = "0.1.0"
requires-python = "==3.11.6"
dependencies = [
    "dotenv>=0.9.9",
    "gradio==5.23.3",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-text-splitters>=0.3.8",
    "numpy>=2.2.5",
    "ollama>=0.4.8",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pip>=25.1",
    "psycopg>=3.2.7",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "transformers>=4.51.3",
    "langchain-postgres>=0.0.13",
    "langchain-openai>=0.3.18",
]
