[project]
name = "development-notebooks"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
]
